test/ping-cloud/pingdataconsole/ingress.yaml
# This defines the ingress for the management console and currently provides
# SSL termination with a self-signed certificate.

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingdataconsole-ingress
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-private
spec:
  tls:
  - hosts:
    - pingdataconsole${ENVIRONMENT}.${TENANT_DOMAIN}
  rules:
  - host: pingdataconsole${ENVIRONMENT}.${TENANT_DOMAIN}
    http:
      paths:
        # This rule gives external access to the pingdirectory console
        - path: /console
          backend:
            serviceName: pingdataconsole-service
            servicePort: 8080
